--- a/roles/deploy/files/nginx.conf
+++ b/roles/deploy/files/nginx.conf
@@ -45,7 +45,21 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://127.0.0.1:8000$request_uri;
+    }
+
+    location = /bans/ {
+        return 301 https://$host/bans/index.php;
+    }
+    
+    # sb++ on 8080 on same machine as front-end
+    location ~ ^/bans/(.+)$ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://127.0.0.1:8080/$1;
     }
 
     error_page 404 /404.html;
