--- a/roles/back/files/Dockerfile
+++ b/roles/back/files/Dockerfile
@@ -8,6 +8,7 @@ RUN cargo build --release
 FROM arm64v8/debian:bullseye-slim
 COPY --from=builder /build/target/release/main /app/main
 
+RUN apt-get update -y && apt-get upgrade -y
 RUN apt-get install ca-certificates -y
 
 ENV ROCKET_ADDRESS=0.0.0.0
