--- a/roles/deploy/files/docker-compose.yml
+++ b/roles/deploy/files/docker-compose.yml
@@ -8,16 +8,16 @@ services:
       - ./data/nginx:/etc/nginx/conf.d
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-      - /web/media:/usr/share/nginx/html/media
-      - /web/fastdl:/usr/share/nginx/html/fastdl
-      - /web/log:/var/log/nginx
+      - ./media:/usr/share/nginx/html/media
+      - ./fastdl:/usr/share/nginx/html/fastdl
+      - ./log:/var/log/nginx
     network_mode: "host"
     command: "/bin/sh -c 'nginx -g \"daemon off;\"'"
   rocket:
     image: "raspyverse-back:latest"
     restart: unless-stopped
     volumes:
-      - /web/back/config.yml:/app/config.yml
+      - ./back/config.yml:/app/config.yml
     ports:
       - "8000:8000"
   certbot:
