--- a/roles/deploy/files/nginx.conf
+++ b/roles/deploy/files/nginx.conf
@@ -1,6 +1,3 @@
-access_log  /var/log/nginx/access_log;
-error_log  /var/log/nginx/error_log;
-
 server {
     listen 80;
     server_name jackavery.ca;
@@ -9,6 +6,7 @@ server {
     # For LetsEncrypt
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
+        try_files $uri =404;
     }
 
     # Redirect everything else to https
