--- a/roles/back/files/Dockerfile
+++ b/roles/back/files/Dockerfile
@@ -1,12 +1,5 @@
-FROM rust:1.70 AS builder
-WORKDIR /build
-COPY . .
-RUN cargo build --release
-
-#
-
 FROM arm64v8/debian:bullseye-slim
-COPY --from=builder /build/target/release/main /app/main
+COPY ./target/release/main /app/main
 
 RUN apt-get update -y && apt-get upgrade -y
 RUN apt-get install ca-certificates -y
