--- a/playbooks/secrets.yml
+++ b/playbooks/secrets.yml
@@ -1,16 +1,45 @@
 ---
+- name: Stat all.secret.yml
+  ansible.builtin.stat:
+    path: "../group_vars/all.secret.yml"
+  register: stat
+  delegate_to: localhost
+
 - name: Include secret all vars.
   ignore_errors: true # don't freak out if it's not there
   ansible.builtin.include_vars: 
     file: "../group_vars/all.secret.yml"
+  when: stat.stat.exists
+
+#
+
+- name: Stat groups
+  ansible.builtin.stat:
+    path: "../group_vars/{{ item }}.secret.yml"
+  loop: "{{ group_names }}"
+  register: stat
+  delegate_to: localhost
+
+- name: Reverse list (innermost group precedence)
+  set_fact:
+    stat_groups: "{{ stat.results[::-1] }}"
 
 - name: Include secret group_vars.
-  ignore_errors: true
   ansible.builtin.include_vars: 
-    file: "../group_vars/{{ item }}.secret.yml"
-  loop: "{{ group_names }}"
+    file: "../group_vars/{{ item.item }}.secret.yml"
+  when: item.stat.exists
+  loop: "{{ stat_groups }}"
+
+#
+
+- name: Stat host_vars/host.secret.yml
+  ansible.builtin.stat:
+    path: "../host_vars/{{ inventory_hostname }}.secret.yml"
+  register: stat
+  delegate_to: localhost
 
 - name: Include secret host_vars.
   ignore_errors: true
   ansible.builtin.include_vars:
     file: "../host_vars/{{ inventory_hostname }}.secret.yml"
+  when: stat.stat.exists
