temp fix for php

--- a/roles/deploy/files/nginx.conf
+++ b/roles/deploy/files/nginx.conf
@@ -9,6 +9,10 @@ server {
         try_files $uri =404;
     }
 
+    location = /bans {
+        return 301 http://$host:8080;
+    }
+
     # Redirect everything else to https
     if ($host = jackavery.ca) {
         return 301 https://$host$request_uri;
@@ -47,17 +51,8 @@ server {
         proxy_pass http://127.0.0.1:8000$request_uri;
     }
 
-    location = /bans/ {
-        return 301 https://$host/bans/index.php;
-    }
-    
-    # sb++ on 8080 on same machine as front-end
-    location ~ ^/bans/(.+)$ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://127.0.0.1:8080/$1;
+    location = /bans {
+        return 301 http://$host:8080;
     }
 
     error_page 404 /404.html;
