--- a/ansible.cfg
+++ b/ansible.cfg
@@ -217,7 +217,7 @@ library=library
 
 # (string) Sets the login user for the target machines
 # When blank it uses the connection plugin's default, normally the user currently executing Ansible.
-remote_user=tf2server
+remote_user=web
 
 # (pathspec) Colon separated paths in which Ansible will search for Roles.
 roles_path=roles
