--- a/roles/deploy/files/docker-compose.yml
+++ b/roles/deploy/files/docker-compose.yml
@@ -1,25 +1,27 @@
 version: '3'
 
 services:
-  nginx:
-    image: "jackavery/jackavery-web:latest"
+  front:
+    image: "nginx:stable-alpine"
     restart: unless-stopped
     volumes:
-      - ./data/nginx:/etc/nginx/conf.d
+      - ./data/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./data/web:/usr/share/nginx/html
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-      - ./media:/usr/share/nginx/html/media
-      - ./fastdl:/usr/share/nginx/html/fastdl
-      - ./log:/var/log/nginx
-    network_mode: "host"
-    command: "/bin/sh -c 'nginx -g \"daemon off;\"'"
-  rocket:
+      - ./data/fastdl:/usr/share/nginx/html/fastdl
+    ports:
+      - 80:80
+      - 443:443
+
+  back:
     image: "jackavery-web-back:latest"
     restart: unless-stopped
     volumes:
       - ./back/config.yml:/app/config.yml
     ports:
-      - "8000:8000"
+      - 8000:8000
+
   certbot:
     image: "certbot/certbot:arm32v6-latest"
     restart: unless-stopped
