--- a/roles/deploy/files/nginx.conf
+++ b/roles/deploy/files/nginx.conf
@@ -9,10 +9,6 @@ server {
         try_files $uri =404;
     }
 
-    location = /bans {
-        return 301 http://$host:8080;
-    }
-
     # Redirect everything else to https
     if ($host = jackavery.ca) {
         return 301 https://$host$request_uri;
@@ -44,15 +40,14 @@ server {
 
     # rocket.rs API on 8000 on same machine as front-end
     location /api/ {
+        resolver 127.0.0.11 ipv6=off;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://127.0.0.1:8000$request_uri;
-    }
 
-    location = /bans {
-        return 301 http://$host:8080;
+        proxy_pass http://back:8000$request_uri;
     }
 
     error_page 404 /404.html;
