use alpine for backend

--- a/roles/back/files/Dockerfile
+++ b/roles/back/files/Dockerfile
@@ -1,8 +1,7 @@
-FROM arm64v8/debian:bullseye-slim
+FROM arm64v8/alpine:latest
 COPY ./target/release/main /app/main
 
-RUN apt-get update -y && apt-get upgrade -y
-RUN apt-get install ca-certificates -y
+RUN apk install ca-certificates
 
 ENV ROCKET_ADDRESS=0.0.0.0
 ENV ROCKET_PORT=8000
