--- a/roles/back/files/Dockerfile
+++ b/roles/back/files/Dockerfile
@@ -1,7 +1,7 @@
 FROM arm64v8/alpine:latest
 COPY ./target/release/main /app/main
 
-RUN apk install ca-certificates
+RUN apk add ca-certificates
 
 ENV ROCKET_ADDRESS=0.0.0.0
 ENV ROCKET_PORT=8000
