--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -407,3 +407,38 @@ hosts: # jackavery.ca/api/hosts
       has_community_maps: false
       crits: false
       spread: false
+
+    ##SKIAL:NAWest
+    # LA 1
+    - ip: 91.216.250.21:27015
+      network: skial
+      region: NAWest
+      has_community_maps: false
+      crits: false
+      spread: false
+
+    ##SKIAL:NACentral
+    # US 1
+    - ip: 91.216.250.40:27015
+      network: skial
+      region: NACentral
+      has_community_maps: false
+      crits: false
+      spread: false
+
+    ##SKIAL:NAEast
+    # NY 1
+    - ip: 91.216.250.34:27015
+      network: skial
+      region: NAEast
+      has_community_maps: false
+      crits: false
+      spread: false
+
+    ##SWISHCAST:EUWest
+    - ip: 57.129.13.51:27015
+      network: swishcast
+      region: EUWest
+      has_community_maps: true
+      crits: true
+      spread: false
