--- a/roles/back/files/Cargo.toml
+++ b/roles/back/files/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3.28"
-lazy_static = "1.4.0"
 log = "0.4.19"
 regex = "1.8.4"
 rocket = { version = "=0.5.0-rc.3", features = ["json"] }
@@ -27,6 +26,7 @@ rsourcequery = { git = "https://github.com/jack-avery/rsourcequery.git", rev = "
 webhook = "2.1.2"
 urlencoding = "2.1.2"
 itertools = "0.11.0"
+once_cell = "1.19.0"
 
 [[bin]]
 name = "main"
