--- a/roles/deploy/files/nginx.conf
+++ b/roles/deploy/files/nginx.conf
@@ -1,5 +1,35 @@
 server {
     listen 80;
+    server_name git.jackavery.ca;
+    server_tokens off;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name git.jackavery.ca;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/jackavery.ca/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/jackavery.ca/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        resolver 127.0.0.11 ipv6=off;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_pass http://git-web$request_uri;
+    }
+}
+
+server {
+    listen 80;
     server_name jackavery.ca;
     server_tokens off;
 
@@ -10,9 +40,7 @@ server {
     }
 
     # Redirect everything else to https
-    if ($host = jackavery.ca) {
-        return 301 https://$host$request_uri;
-    }
+    return 301 https://$host$request_uri;
 }
 
 server {
