--- a/roles/deploy/files/Caddyfile
+++ b/roles/deploy/files/Caddyfile
@@ -3,7 +3,6 @@ www.jackavery.ca {
 }
 
 jackavery.ca {
-    root * /usr/share/nginx/html
     encode gzip
 
     handle /api/* {
@@ -11,8 +10,16 @@ jackavery.ca {
     }
 
     handle {
-        root * /usr/share/nginx/html
-        try_files {path} /index.html
+        root * /usr/share/caddy
+        try_files {path} {path}/index.html =404
+        file_server
+    }
+
+    handle_errors {
+        @404 {
+            expression {http.error.status_code} == 404
+        }
+        rewrite @404 /404.html
         file_server
     }
 }
