--- a/roles/deploy/files/docker-compose.yml
+++ b/roles/deploy/files/docker-compose.yml
@@ -2,14 +2,13 @@ version: '3'
 
 services:
   front:
-    image: "nginx:stable-alpine"
+    image: "caddy:alpine"
     restart: unless-stopped
     volumes:
-      - ./data/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./data/web:/usr/share/nginx/html
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-      - ./data/fastdl:/usr/share/nginx/html/fastdl
+      - ./data/Caddyfile:/etc/caddy/Caddyfile
+      - ./data/caddy:/data
+      - ./data/web:/usr/share/caddy
+      - ./data/fastdl:/usr/share/caddy/fastdl
     ports:
       - 80:80
       - 443:443
@@ -21,12 +20,3 @@ services:
       - ./back/config.yml:/app/config.yml
     ports:
       - 8000:8000
-
-  certbot:
-    image: "certbot/certbot:arm32v6-latest"
-    restart: unless-stopped
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-    network_mode: "host"
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
