--- a/roles/deploy/files/docker-compose.yml
+++ b/roles/deploy/files/docker-compose.yml
@@ -2,13 +2,14 @@ version: '3'
 
 services:
   front:
-    image: "caddy:alpine"
+    image: "nginx:stable-alpine"
     restart: unless-stopped
     volumes:
-      - ./data/Caddyfile:/etc/caddy/Caddyfile
-      - ./data/caddy:/data
-      - ./data/web:/usr/share/caddy
-      - ./data/fastdl:/usr/share/caddy/fastdl
+      - ./data/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./data/web:/usr/share/nginx/html:ro
+      - ./data/certbot/conf:/etc/letsencrypt:ro
+      - ./data/certbot/www:/var/www/certbot:ro
+      - ./data/fastdl:/usr/share/nginx/html/fastdl:ro
     ports:
       - 80:80
       - 443:443
@@ -17,6 +18,15 @@ services:
     image: "jackavery-web-back:latest"
     restart: unless-stopped
     volumes:
-      - ./back/config.yml:/app/config.yml
+      - ./back/config.yml:/app/config.yml:ro
     ports:
       - 8000:8000
+
+  certbot:
+    image: "certbot/certbot:arm32v6-latest"
+    restart: unless-stopped
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    network_mode: "host"
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
